Finalized responsive design tweaks to fix layout shifting post-deployment.

--- a/src/components/agency-services/AgencyServices.module.css
+++ b/src/components/agency-services/AgencyServices.module.css
@@ -88,7 +88,7 @@
 
 .expandButton {
   border: none;
-  background-color:transparent;
+  background-color: transparent;
   width: 48px;
   height: 48px;
   font-weight: bold;
@@ -105,7 +105,7 @@
   transition: transform 0.3s ease;
 }
 
-.expandButton.expanded img{
+.expandButton.expanded img {
   background-color: #EDEDED;
   transform: rotate(180deg);
 }
@@ -124,13 +124,15 @@
   padding: 10px 20px 20px 20px;
 }
 
-@media screen and (max-width: 480px){
+@media screen and (max-width: 480px) {
   .agencyServices {
+    max-width: 480px;
+    width: 100%;
     padding: 10px 0 80px 0;
   }
 
   .container {
-    width: 480px;
+    width: 100%;
   }
 
   .wrapper {
@@ -140,11 +142,11 @@
 
   .wrapper img {
     width: 90%;
+    height: auto;
   }
 
   .accordion {
-    width: 480px;
     padding: 0 20px 0 20px;
-    
+
   }
 }
