--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -171,6 +171,10 @@
 }
 
 @media screen and (max-width: 480px) {
+    .footer {
+        max-width: 480px;
+        width: 100%;
+    }
    
     .container {
         max-width: 480px;
