--- a/src/components/portfolio/Portfolio.module.css
+++ b/src/components/portfolio/Portfolio.module.css
@@ -109,7 +109,8 @@
 
 @media screen and (max-width: 480px) {
     .portfolio {
-        width: 480px;
+        max-width: 480px;
+        width: 100%;
     }
 
     .card,
@@ -143,5 +144,7 @@
     .line:last-of-type {
         width: 440px;
         margin-top: 0;
+        display: inline-block;
+        padding: 0 20px;
     }
 }
