--- a/src/components/services/Services.module.css
+++ b/src/components/services/Services.module.css
@@ -122,6 +122,8 @@
 
 @media screen and (max-width: 480px) {
   .services {
+    max-width: 480px;
+    width: 100%;
     padding: 64px 20px;
   }
 
